some fixes + Message.ofPlainText()